Fix layout issues for hero elements

--- a/css/main.css
+++ b/css/main.css
@@ -43,23 +43,27 @@ nav {
 .hero {
     background-image: url("../assets/images/hero.jpg");
     background-position: 790px 950px;
-    background-repeat: inherit;
+    background-repeat: initial;
     margin-top: 2.5vh;
     height: 60vh;
+    min-height: 450px;
     width: 100%;
     box-sizing: border-box;
     padding: 0px;
     display: flex;
+    align-items: flex-end;
 }
 
 .blur {
-    background-color:rgba(0, 0, 0, 0.5);
+    background: rgb(0,0,0);
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 30%;
     align-self: end;
-    display: flex;
     justify-content: center;
     align-content: center;
+    filter: opacity(75%);
     
 }
 
@@ -67,4 +71,17 @@ nav {
     font-size: 95%;
     line-height: 100%;
     text-align: center;
+
+}
+
+/* Responsive styles for hero */
+@media only screen and (min-width: 1280px) {
+    .hero {
+        background-position: 0px 950px;
+    }
+
+    .blur {
+        height: 25%;
+    }
+
 }
